--- a/main.scss
+++ b/main.scss
@@ -74,7 +74,7 @@ button {
 .transparent {
   width: 100%;
   height: 100%;
-  background-image: url("./image/rubbin_cup.png");
+  background-image: url("./image/roubbin-cup.png");
   background-size: cover;
 }
 
