--- a/main.css
+++ b/main.css
@@ -168,7 +168,7 @@ button:hover {
 .time-mark {
   display: flex;
   flex-direction: column;
-  grid-column: 1/3;
+  grid-column: 1/2;
   align-items: center;
 }
 
@@ -183,7 +183,7 @@ button:hover {
   font-size: var(--step-2);
 }
 
-.text {
+div.text {
   grid-column: 3/6;
 }
 
@@ -200,8 +200,9 @@ button:hover {
 
 .portrait img {
   display: block;
+  grid-column: 6/9;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .name {
@@ -257,16 +258,16 @@ button:hover {
   align-self: start;
 }
 .philosopher.left img {
-  width: auto;
-  height: clamp(280px, var(--step-3) * 20, 520px);
+  width: 100%;
+  height: 100%;
 }
 
 .philosopher.main {
   grid-column: 4/8;
 }
 .philosopher.main img {
-  width: auto;
-  height: clamp(360px, var(--step-4) * 22, 720px);
+  width: 100%;
+  height: 100%;
 }
 
 .philosopher.right {
@@ -274,8 +275,8 @@ button:hover {
   align-self: end;
 }
 .philosopher.right img {
-  width: auto;
-  height: clamp(280px, var(--step-3) * 20, 520px);
+  width: 100%;
+  height: 100%;
 }
 
 .timeline-phi {
@@ -323,16 +324,15 @@ button:hover {
 
 .phi-portrait img {
   display: block;
-  width: clamp(100px, var(--step-2) * 8, 224px);
-  height: auto;
+  grid-column: 5/6;
+  width: 130%;
+  height: 130%;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
 .phi-quote {
   grid-column: 7/11;
-  align-self: center;
-  padding-left: clamp(var(--space-m), var(--space-l), var(--space-xl));
 }
 .phi-quote h3 {
   margin-bottom: var(--space-s);
